--- a/ArchivosTex/Bibliografia.bib
+++ b/ArchivosTex/Bibliografia.bib
@@ -28,4 +28,24 @@
   timestamp = {2017-03-12},
 }
 
+@Article{Graeler2016,
+  author  = {Benedikt Gräler and Edzer Pebesma and Gerard Heuvelink},
+  title   = {Spatio-Temporal Interpolation using gstat},
+  journal = {The R Journal},
+  year    = {2016},
+  volume  = {8},
+  pages   = {204-218},
+  issue   = {1},
+  url     = {https://journal.r-project.org/archive/2016-1/na-pebesma-heuvelink.pdf},
+}
+
+@Article{Pebesma2004,
+  author  = {Edzer J. Pebesma},
+  title   = {Multivariable geostatistics in S: the gstat package},
+  journal = {Computers \& Geosciences},
+  year    = {2004},
+  volume  = {30},
+  pages   = {683-691},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
